--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -1,24 +1,25 @@
-# $Id: Makefile,v 1.1.1.1 1997/10/30 01:04:20 hubertf Exp $
+# $NetBSD: Makefile,v 1.2 1997/10/30 01:08:22 hubertf Exp $
+# FreeBSD Id: Makefile,v 1.13 1997/10/13 11:11:32 itojun Exp
 #
 
-    SUBDIR += agrep
-    SUBDIR += docbook
-    SUBDIR += glimpse
-    SUBDIR += html
-    SUBDIR += info2html
-    SUBDIR += isearch
-    SUBDIR += iso12083
-    SUBDIR += iso8879
-    SUBDIR += ispell
-    SUBDIR += jade
-    SUBDIR += linuxdoc
-    SUBDIR += mgdiff
-    SUBDIR += par
-    SUBDIR += pilot_makedoc
-    SUBDIR += rman
-    SUBDIR += sgmlformat
-    SUBDIR += sp
-    SUBDIR += unroff
-    SUBDIR += wdiff
+#    SUBDIR += agrep
+#    SUBDIR += docbook
+#    SUBDIR += glimpse
+#    SUBDIR += html
+#    SUBDIR += info2html
+#    SUBDIR += isearch
+#    SUBDIR += iso12083
+#    SUBDIR += iso8879
+#    SUBDIR += ispell
+#    SUBDIR += jade
+#    SUBDIR += linuxdoc
+#    SUBDIR += mgdiff
+#    SUBDIR += par
+#    SUBDIR += pilot_makedoc
+#    SUBDIR += rman
+#    SUBDIR += sgmlformat
+#    SUBDIR += sp
+#    SUBDIR += unroff
+#    SUBDIR += wdiff
 
 .include <bsd.port.subdir.mk>
