--- a/textproc/glimpse/Makefile
+++ b/textproc/glimpse/Makefile
@@ -3,7 +3,8 @@
 # Date created:		25 August 1996
 # Whom:			chuckr@freebsd.org
 #
-# $Id: Makefile,v 1.1.1.1 1997/10/30 01:34:52 hubertf Exp $
+# $NetBSD: Makefile,v 1.2 1997/10/30 01:40:32 hubertf Exp $
+# FreeBSD Id: Makefile,v 1.12 1997/07/17 19:29:07 andreas Exp
 #
 
 DISTNAME=       glimpse-4.0.src
