--- a/archivers/zip/Makefile
+++ b/archivers/zip/Makefile
@@ -5,7 +5,7 @@
 # Date created:         22 Dec 1994
 # Whom:                 ache
 #
-# $NetBSD: Makefile,v 1.2 1997/10/27 03:22:29 hubertf Exp $
+# $NetBSD: Makefile,v 1.3 1997/11/01 01:49:08 hubertf Exp $
 # FreeBSD Id: Makefile,v 1.10 1997/04/27 16:06:15 ache Exp 
 #
 
@@ -32,5 +32,16 @@ do-install:
 	    ${INSTALL_PROGRAM} zip zipnote zipsplit zipcloak ${PREFIX}/bin
 	cd ${WRKSRC}/man && \
 	    ${INSTALL_MAN} ${MAN1} ${PREFIX}/man/man1
+
+post-install:
+.if defined(MANZ)
+	ln ${PREFIX}/man/man1/zip.1.gz	${PREFIX}/man/man1/zipcloak.1.gz
+	ln ${PREFIX}/man/man1/zip.1.gz	${PREFIX}/man/man1/zipnote.1.gz
+	ln ${PREFIX}/man/man1/zip.1.gz	${PREFIX}/man/man1/zipsplit.1.gz
+.else
+	ln ${PREFIX}/man/man1/zip.1	${PREFIX}/man/man1/zipcloak.1
+	ln ${PREFIX}/man/man1/zip.1	${PREFIX}/man/man1/zipnote.1
+	ln ${PREFIX}/man/man1/zip.1	${PREFIX}/man/man1/zipsplit.1
+.endif
 
 .include <bsd.port.mk>
