--- a/x11/lesstif/Makefile
+++ b/x11/lesstif/Makefile
@@ -3,7 +3,8 @@
 # Date created:		December 10, 1996
 # Whom:			1wardd@airmail.net
 #
-# $Id: Makefile,v 1.1.1.1 1997/11/02 02:45:51 hubertf Exp $
+# $NetBSD: Makefile,v 1.2 1997/11/02 02:47:25 hubertf Exp $
+# FreeBSD Id: Makefile,v 1.13 1997/09/08 08:34:13 tg Exp
 #
 
 DISTNAME=	lesstif-0.81
