--- a/x11/xlockmore/Makefile
+++ b/x11/xlockmore/Makefile
@@ -3,7 +3,7 @@
 # Date created:		9 November 1994
 # Whom:			smace
 #
-# $NetBSD: Makefile,v 1.2 1997/11/03 00:53:23 hubertf Exp $
+# $NetBSD: Makefile,v 1.3 1997/11/03 01:01:31 hubertf Exp $
 # FreeBSD Id: Makefile,v 1.23 1997/10/10 09:24:38 tg Exp
 #
 
@@ -14,12 +14,13 @@ MASTER_SITE_SUBDIR=	applications
 
 MAINTAINER=	tg@FreeBSD.ORG
 
-LIB_DEPENDS=	Xpm\\.4\\.:${PORTSDIR}/graphics/xpm
+LIB_DEPENDS=	Xpm\\.4\\.:${PORTSDIR}/graphics/xpm \
+		MesaGL\\.2\\.:${PORTSDIR}/graphics/Mesa 
 
 GNU_CONFIGURE=	yes
-CONFIGURE_ARGS+= --without-gl --without-motif --without-sx --without-mesagl \
+CONFIGURE_ARGS+= --with-mesagl --without-motif --without-sx \
 		--without-editres --without-dtsaver --without-rplay \
-		--without-nas --enable-mouse-motion
+		--without-nas
 USE_X11=	yes
 MAN1=		xlock.1
 
