--- a/misc/screen/Makefile
+++ b/misc/screen/Makefile
@@ -3,11 +3,11 @@
 # Date created:         25 Nov 1994
 # Whom:                 ache
 #
-# $NetBSD: Makefile,v 1.2 1997/10/11 22:14:42 hubertf Exp $
+# $NetBSD: Makefile,v 1.3 1997/11/05 00:37:12 explorer Exp $
 # FreeBSD Id: Makefile,v 1.17 1997/06/16 06:39:51 max Exp
 #
 
-DISTNAME=       screen-3.7.2
+DISTNAME=       screen-3.7.4
 CATEGORIES=	misc
 MASTER_SITES=   ftp://ftp.uni-erlangen.de/pub/utilities/screen/ \
 		${MASTER_SITE_GNU}
