--- a/net/ircII/Makefile
+++ b/net/ircII/Makefile
@@ -3,21 +3,21 @@
 # Date created:		18 Oct 1994
 # Whom:			torstenb
 #
-# $NetBSD: Makefile,v 1.3 1997/11/09 22:12:40 hubertf Exp $
+# $NetBSD: Makefile,v 1.4 1997/11/10 16:03:28 mrg Exp $
 # FreeBSD Id: Makefile,v 1.14 1997/05/14 10:35:13 torstenb Exp
 #
 
-DISTNAME=	ircii-2.9-roof
-PKGNAME=		ircII-2.9roof
-WRKSRC=			${WRKDIR}/ircii-2.9
+DISTNAME=	ircii-2.9beta2
+PKGNAME=		ircII-2.9beta2
+WRKSRC=			${WRKDIR}/ircii-2.9beta2
 CATEGORIES=	net
-MASTER_SITES=	ftp://cs-ftp.bu.edu/irc/clients/
+MASTER_SITES=	ftp://ircii.warped.com/pub/ircII/
 
-MAINTAINER=	torstenb@FreeBSD.ORG
+MAINTAINER=	mrg@eterna.com.au
 
 GNU_CONFIGURE=	yes
 #CONFIGURE_ARGS+=	--with-default-server=SERVER[:PORT]
 
-MAN1=		ircII.1 ircbug.1
+MAN=		ircII.1 ircbug.1
 
 .include <bsd.port.mk>
