--- a/devel/automake/Makefile
+++ b/devel/automake/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.3 1997/10/09 09:24:05 agc Exp $
+# $NetBSD: Makefile,v 1.4 1997/11/13 14:37:31 hubertf Exp $
 # New ports collection makefile for:	automake
 # Version required:	1.2
 # Date created:		15 March 1997
@@ -20,7 +20,7 @@ STRIP=		 # none
 OPSYS!= 	uname -s
 
 .if (${OPSYS} == "NetBSD")
-BUILD_DEPENDS=	install-info:${PORTSDIR}/devel/gtexinfo
+BUILD_DEPENDS=	${PREFIX}/bin/install-info:${PORTSDIR}/devel/gtexinfo
 .endif
 
 pre-install:
