--- a/sysutils/xosview/Makefile
+++ b/sysutils/xosview/Makefile
@@ -1,18 +1,17 @@
-# $NetBSD: Makefile,v 1.2 1997/10/24 15:12:12 agc Exp $
+# $NetBSD: Makefile,v 1.3 1997/11/13 15:52:36 agc Exp $
 # New ports collection makefile for:    xosview
-# Version required:     		1.4.4beta
+# Version required:     		1.5.0
 # Date created:         		Fri Oct 24 10:03:55 BST 1997
 # Whom:                 		Alistair Crooks (agc@netbsd.org)
 #
 
-DISTNAME=       xosview-1.4.4beta
+DISTNAME=       xosview-1.5.0
 CATEGORIES=	sysutils
 MASTER_SITES=   http://lore.ece.utexas.edu/~bgrayson/xosview/
 
 MAINTAINER=	bgrayson@ece.utexas.edu
 
 GNU_CONFIGURE=	yes
-USE_GMAKE=	yes
 USE_X11=	yes
 MAN1=		xosview.1
 
