--- a/audio/gsm/Makefile
+++ b/audio/gsm/Makefile
@@ -3,7 +3,7 @@
 # Date created:		5 January 1995
 # Whom:			pst
 #
-# $NetBSD: Makefile,v 1.2 1997/10/28 23:46:46 augustss Exp $
+# $NetBSD: Makefile,v 1.3 1997/11/14 14:09:42 agc Exp $
 # FreeBSD Id: Makefile,v 1.10 1997/07/17 15:12:39 max Exp 
 #
 
@@ -14,7 +14,6 @@ MASTER_SITES=	ftp://ftp.cs.tu-berlin.de/pub/local/kbs/tubmik/gsm/
 # FreeBSD maintainer
 MAINTAINER=	ports@FreeBSD.org
 
-USE_GMAKE=	yes
 MAKE_FLAGS=	PREFIX="${PREFIX}"
 
 WRKSRC=         ${WRKDIR}/gsm-1.0-pl10
