--- a/archivers/Makefile
+++ b/archivers/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.3 1997/11/18 12:27:08 agc Exp $
+# $NetBSD: Makefile,v 1.4 1997/11/18 13:09:42 agc Exp $
 # FreeBSD Id: Makefile,v 1.18 1997/05/16 01:42:31 asami Exp 
 #
 
@@ -6,18 +6,18 @@
     SUBDIR += bzip
     SUBDIR += freeze
 #    SUBDIR += gshar+gunshar
-#    SUBDIR += ha
+    SUBDIR += ha
 #    SUBDIR += hpack.non-usa.only
     SUBDIR += lha
 #    SUBDIR += nulib
 #    SUBDIR += p5-Compress-Zlib
-#    SUBDIR += rar
-#    SUBDIR += unarj
-#    SUBDIR += unrar
+    SUBDIR += rar
+    SUBDIR += unarj
+    SUBDIR += unrar
     SUBDIR += unzip
 #    SUBDIR += unzip.with_encryption
     SUBDIR += zip
 #    SUBDIR += zip.with_encryption
-#    SUBDIR += zoo
+    SUBDIR += zoo
 
 .include <bsd.port.subdir.mk>
