--- a/archivers/zoo/Makefile
+++ b/archivers/zoo/Makefile
@@ -3,7 +3,7 @@
 # Date created:         18 October 1994
 # Whom:                 jmz
 #
-# $NetBSD: Makefile,v 1.2 1997/10/27 03:22:33 hubertf Exp $
+# $NetBSD: Makefile,v 1.3 1997/11/18 13:10:49 agc Exp $
 # FreeBSD Id: Makefile,v 1.8 1997/08/10 22:31:36 fenner Exp 
 #
 
@@ -17,6 +17,8 @@ MAINTAINER=	jmz@FreeBSD.org
 NO_WRKSUBDIR=	yes
 ALL_TARGET=     bsdansi
 MAKEFILE=       makefile
+MAKE_ENV+=	COPY=${COPY} STRIP=${STRIP} \
+		BINOWN=${BINOWN} BINGRP=${BINGRP} BINMODE=${BINMODE}
 MAN1=		fiz.1 zoo.1
 
 .include <bsd.port.mk>
