--- a/mbone/Makefile
+++ b/mbone/Makefile
@@ -1,14 +1,15 @@
+# $NetBSD: Makefile,v 1.2 1997/11/18 17:21:25 is Exp $
 # Id: Makefile,v 1.5 1996/12/03 10:41:49 asami Exp
 #
 
-    SUBDIR += imm
-    SUBDIR += mbone_vcr
-    SUBDIR += nte
-    SUBDIR += rtpmon
+#    SUBDIR += imm
+#    SUBDIR += mbone_vcr
+#    SUBDIR += nte
+#    SUBDIR += rtpmon
     SUBDIR += sdr
-    SUBDIR += speak_freely
-    SUBDIR += vat
-    SUBDIR += vic
-    SUBDIR += wb
+#    SUBDIR += speak_freely
+#    SUBDIR += vat
+#    SUBDIR += vic
+#    SUBDIR += wb
 
 .include <bsd.port.subdir.mk>
