--- a/mbone/Makefile
+++ b/mbone/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2 1997/11/18 17:21:25 is Exp $
+# $NetBSD: Makefile,v 1.3 1997/11/19 16:29:12 is Exp $
 # Id: Makefile,v 1.5 1996/12/03 10:41:49 asami Exp
 #
 
@@ -9,7 +9,7 @@
     SUBDIR += sdr
 #    SUBDIR += speak_freely
 #    SUBDIR += vat
-#    SUBDIR += vic
+    SUBDIR += vic
 #    SUBDIR += wb
 
 .include <bsd.port.subdir.mk>
