--- a/net/Makefile
+++ b/net/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.5 1997/11/19 16:06:28 agc Exp $
+# $NetBSD: Makefile,v 1.6 1997/11/21 15:10:58 agc Exp $
 # FreeBSD Id: Makefile,v 1.117 1997/08/16 03:11:52 gpalmer Exp 
 #
 
@@ -59,7 +59,7 @@
 #    SUBDIR += samba
 #    SUBDIR += scotty
 #    SUBDIR += slirp
-#    SUBDIR += socks5
+    SUBDIR += socks5
 #    SUBDIR += strobe
 #    SUBDIR += sup
 #    SUBDIR += tac_plus
